--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,15 +1,11 @@
 <div class="article-format">
 {% unless page.no_header %}
   <header>
-    {% if index %}
-      <h1 class="entry-title"><a href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a></h1>
-    {% else %}
-      <h1 class="entry-title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
-    {% endif %}
+    <h1 class="entry-title">{% include post/title.html %}</h1>
     {% unless page.meta == false %}
       <p class="meta">
-        {% include post/author.html %} - 
-        {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %} - 
+        {% include post/author.html %} -
+        {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %} -
         {% include post/categories.html %}
         {% if site.disqus_short_name and page.comments != false and post.comments != false and site.disqus_show_comment_count == true %}
          | <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#disqus_thread">Comments</a>
@@ -32,8 +28,8 @@
 {% unless index %}
   <footer>
     <p class="meta">
-      {% include post/author.html %} - 
-      {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %} - 
+      {% include post/author.html %} -
+      {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %} -
       {% include post/categories.html %}
     </p>
     {% unless page.sharing == false %}
